# flowzero

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run_script.bat  run_script.sh  run_tests.bat  run_tests.sh
.github/workflows/: ci.yml  python-app.yml
flowzero_src/: generate_boards.py  train.py
flowzero_src/data/synthetic/: synth_puzzle_20250714141214_001_10x10.npy  synth_puzzle_20250714141214_002_10x10.npy  synth_puzzle_20250714141215_003_10x10.npy  synth_puzzle_20250714141215_004_10x10.npy  synth_puzzle_20250714141216_005_10x10.npy  synth_puzzle_20250714142615_001_10x10.npy  synth_puzzle_20250714142615_002_10x10.npy  synth_puzzle_20250714142615_003_10x10.npy  synth_puzzle_20250714142616_004_10x10.npy  synth_puzzle_20250714142616_005_10x10.npy  synth_puzzle_20250714142617_006_10x10.npy  synth_puzzle_20250714142645_007_10x10.npy  synth_puzzle_20250714142645_008_10x10.npy  synth_puzzle_20250714142701_009_10x10.npy  synth_puzzle_20250714142715_010_10x10.npy  synth_puzzle_20250714142716_011_10x10.npy  synth_puzzle_20250714142728_012_10x10.npy  synth_puzzle_20250714142729_013_10x10.npy  synth_puzzle_20250714142730_014_10x10.npy  synth_puzzle_20250714142749_015_10x10.npy  synth_puzzle_20250714142811_016_10x10.npy  synth_puzzle_20250714142847_017_10x10.npy  synth_puzzle_20250714142847_018_10x10.npy  synth_puzzle_20250714142857_019_10x10.npy  synth_puzzle_20250714142907_020_10x10.npy  synth_puzzle_20250714142910_021_10x10.npy  synth_puzzle_20250714143037_022_10x10.npy  synth_puzzle_20250714143038_023_10x10.npy  synth_puzzle_20250714143055_024_10x10.npy  synth_puzzle_20250714143149_025_10x10.npy  synth_puzzle_20250714143150_026_10x10.npy  synth_puzzle_20250714143152_027_10x10.npy  synth_puzzle_20250714143152_028_10x10.npy  synth_puzzle_20250714143200_029_10x10.npy  synth_puzzle_20250714143204_030_10x10.npy  synth_puzzle_20250714143210_031_10x10.npy  synth_puzzle_20250714143255_032_10x10.npy  synth_puzzle_20250714143259_033_10x10.npy  synth_puzzle_20250714143305_034_10x10.npy  synth_puzzle_20250714143325_035_10x10.npy  (+68 more)
flowzero_src/flowfree/: game.py  generate_board.py  solver.py
flowzero_src/gym/: flowfree_gym_env.py
flowzero_src/mcgs/: mcgs.py
flowzero_src/mcts/: mcts.py  mcts_node.py
flowzero_src/util/: config.py  save_util.py  tree_node.py
scripts/: __init__.py  del_invalid_synth_boards.py  visualize_synthetic_boards.py
tests/: conftest.py
tests/test_game/: test_board.py  test_game.py
tests/test_mcgs/: test_mcgs.py
tests/test_solver/: test_solver.py
tests/test_utilities/: test_config.py
